# xrp-ticker

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  config.toml.example  pyproject.toml
.claude/: CLAUDE.md  settings.json  settings.json.bak  settings.local.json
.claude/agents/: architect.md  backend.md  build-resolver.md  database.md  devops.md  docs.md  frontend.md  security.md  tester.md
.claude/checklists/: phase-detection.md  pre-commit.md  pre-merge.md  pre-release.md  severity-guide.md
.claude/commands/: adr.md  assess.md  audit-blueprint.md  closeout.md  daily.md  debt.md  fix.md  migrate.md  onboard.md  plan.md  postmortem.md  refactor.md  release.md  review.md  secure.md  spike.md  test.md
.claude/hooks/: agent-synthesizer.js  agent-tracker.js  bash-validator.js  context-injector.js  dod-verifier.js  file-validator.js  post-edit.js  pre-compact.js  session-end.js  session-start.js  task-completed.js  teammate-idle.js  utils.js
.claude/rules/: learnings.md
.claude/skills/: commit-style.md  no-guessing.md  test-first.md  update-bundle.md
docs/decisions/: ADR-001-service-architecture.md  ADR-002-security-architecture.md  README.md
documentation/: 01-configuration.md  02-cli.md  03-price-feed.md  04-xrpl-balance.md  05-tui-app.md  06-security.md  07-themes.md  08-widgets.md  _index.md
src/xrp_ticker/: __init__.py  __main__.py  app.py  config.py  constants.py  (+3 more)
tests/: CLAUDE.md  __init__.py  conftest.py  test_app.py  test_cli.py  test_config.py  test_constants.py  test_models.py  test_security.py  test_services.py  test_themes.py  test_widgets.py
(+16 files in other folders)
