[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xrp-ticker"
version = "0.1.0"
description = "A modern terminal-based XRP portfolio tracker with real-time price updates"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["xrp", "cryptocurrency", "terminal", "tui", "ticker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "textual>=0.47.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
xrp-ticker = "xrp_ticker.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xrp_ticker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/xrp_ticker"]

[tool.coverage.report]
show_missing = true
skip_empty = true
